# rusttrader

./: .env  Cargo.toml  Config.toml  Dockerfile  build.rs  proto
.github/workflows/: rust.yml
config/: default.toml  development.toml
proto/: indicators.proto  plot.proto
src/: --lib.rs  Config.toml  alpaca_to_polars.rs  client.rs  config.rs  config2.rs  data.rs  dataframe.rs  error.rs  helper.rs  indicator_decision.rs  lib.rs  main.rs  runner.rs  settings.rs  settings_delete.rs  test_helper.rs  trade.rs  trader.rs  traits.rs  trash  types.rs
src/data/: csv_file.rs  datasource.rs  mod.rs
src/indicators/: bollinger_bands.rs  exponential_moving_average.rs  max_drawdown.rs  max_drawup.rs  maximum.rs  mean_absolute_deviation.rs  minimum.rs  mod.rs  rate_of_change.rs  relative_strength_index.rs  simple_moving_average.rs  standard_deviation.rs
src/portfolio/: eval.rs  methods.rs  types.rs
stubs/calculate/: unary.yaml
