[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.43", features = ["lazy","dynamic_group_by"]}
chrono = "0.4"
apca = "0.29"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04", "serde"]}
serde = { version = "1.0", features = ["derive"] }
struct_iterable = "0.1.1"
thiserror = "1.0"
axum = { version = "0.7" }
tracing = "0.1"# for our async runtime
tracing-subscriber = { version = "0.3", features = ["json"] }
prost ="0.13.3"
tonic-reflection = "0.11"
tonic = "0.12.3"
toml = "0.8"
mockall = "0.13.1"


[build-dependencies]
tonic-build ="0.12.3"

[dev-dependencies]
grpcmock = "0.1.0"

