[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.46", features = ["lazy", "dynamic_group_by"] }
chrono = "0.4"
apca = "0.30"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
num-decimal = { version = "0.2.4", default-features = false, features = [
    "num-v04",
    "serde",
] }

http = { version = "1.1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
http-endpoint = { version = "0.6", default-features = false }
hyper = { version = "1.1", default-features = false, features = [
    "client",
    "http1",
] }
hyper-util = { version = "0.1.3", default-features = false, features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
hyper-tls = { version = "0.6", default-features = false }
futures = { version = "0.3", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false }
url = "2.0"


serde = { version = "1.0", features = ["derive"] }
struct_iterable = "0.1.1"
thiserror = "2.0"
axum = { version = "0.8" }
tracing = "0.1"                                               # for our async runtime
tracing-subscriber = { version = "0.3", features = ["json"] }
prost = "0.13.3"
tonic-reflection = "0.13"
tonic = "0.13"
toml = "0.8"
config = "0.15.11"
mockall = "0.13.1"


[build-dependencies]
tonic-build = "0.13"

#[dev-dependencies]
#grpcmock = "0.1.0"
